// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders breadcumb correctly 1`] = `
<div
  className=
      ms-ResizeGroup
      {
        display: block;
        position: relative;
      }
>
  <div
    style={
      Object {
        "position": "fixed",
        "visibility": "hidden",
      }
    }
  >
    <div
      aria-label={undefined}
      className="ms-Breadcrumb"
      role="navigation"
    >
      <div
        aria-describedby={undefined}
        aria-labelledby={undefined}
        className="ms-FocusZone"
        data-focuszone-id="FocusZone0"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <ol
          className="ms-Breadcrumb-list"
        >
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText1
              </div>
            </span>
            <i
              aria-hidden={true}
              className=
                  ms-Breadcrumb-chevron
                  {
                    display: inline-block;
                  }
              data-icon-name="ChevronRight"
              role="presentation"
            />
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText2
              </div>
            </span>
            <i
              aria-hidden={true}
              className=
                  ms-Breadcrumb-chevron
                  {
                    display: inline-block;
                  }
              data-icon-name="ChevronRight"
              role="presentation"
            />
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText3
              </div>
            </span>
            <i
              aria-hidden={true}
              className=
                  ms-Breadcrumb-chevron
                  {
                    display: inline-block;
                  }
              data-icon-name="ChevronRight"
              role="presentation"
            />
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText4
              </div>
            </span>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb renders breadcumb correctly 2`] = `
<div
  className=
      ms-ResizeGroup
      {
        display: block;
        position: relative;
      }
>
  <div
    style={
      Object {
        "position": "fixed",
        "visibility": "hidden",
      }
    }
  >
    <div
      aria-label={undefined}
      className="ms-Breadcrumb"
      role="navigation"
    >
      <div
        aria-describedby={undefined}
        aria-labelledby={undefined}
        className="ms-FocusZone"
        data-focuszone-id="FocusZone5"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <ol
          className="ms-Breadcrumb-list"
        >
          <li
            className="ms-Breadcrumb-overflow"
          >
            <button
              aria-describedby={null}
              aria-expanded={false}
              aria-haspopup={true}
              aria-label={undefined}
              aria-labelledby={null}
              aria-owns={null}
              aria-pressed={undefined}
              className=
                  ms-Button
                  ms-Breadcrumb-overflowButton
                  ms-Button--icon
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    background-color: transparent;
                    border-radius: 0px;
                    border: 1px solid transparent;
                    box-sizing: border-box;
                    cursor: pointer;
                    display: inline-block;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    height: 32px;
                    outline: transparent;
                    padding-bottom: 0;
                    padding-left: 4px;
                    padding-right: 4px;
                    padding-top: 0;
                    position: relative;
                    text-align: center;
                    text-decoration: none;
                    user-select: none;
                    vertical-align: top;
                    width: 32px;
                  }
                  &::-moz-focus-inner {
                    border: 0;
                  }
                  .ms-Fabric.is-focusVisible &:focus:after {
                    border: 1px solid #ffffff;
                    bottom: 0px;
                    content: "";
                    left: 0px;
                    outline: 1px solid #666666;
                    position: absolute;
                    right: 0px;
                    top: 0px;
                    z-index: 1;
                  }
                  @media screen and (-ms-high-contrast: active){.ms-Fabric.is-focusVisible &:focus:after {
                    border: none;
                    bottom: -2px;
                    left: -2px;
                    outline-color: ButtonText;
                    right: -2px;
                    top: -2px;
                  }
                  &:hover {
                    color: #004578;
                  }
                  &:active {
                    color: #0078d4;
                  }
              data-is-focusable={true}
              disabled={undefined}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <div
                className=
                    ms-Button-flexContainer
                    {
                      align-items: center;
                      display: flex;
                      flex-wrap: nowrap;
                      height: 100%;
                      justify-content: center;
                    }
              >
                <i
                  aria-hidden={true}
                  className=
                      ms-Button-icon
                      {
                        display: inline-block;
                      }
                      {
                        flex-shrink: 0;
                        font-size: 16px;
                        height: 16px;
                        line-height: 16px;
                        margin-bottom: 0;
                        margin-left: 4px;
                        margin-right: 4px;
                        margin-top: 0;
                        text-align: center;
                        vertical-align: middle;
                      }
                  data-icon-name="More"
                  role="presentation"
                />
              </div>
            </button>
            <i
              aria-hidden={true}
              className=
                  ms-Breadcrumb-chevron
                  {
                    display: inline-block;
                  }
              data-icon-name="ChevronRight"
              role="presentation"
            />
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText3
              </div>
            </span>
            <i
              aria-hidden={true}
              className=
                  ms-Breadcrumb-chevron
                  {
                    display: inline-block;
                  }
              data-icon-name="ChevronRight"
              role="presentation"
            />
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText4
              </div>
            </span>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb renders breadcumb correctly 3`] = `
<div
  className=
      ms-ResizeGroup
      {
        display: block;
        position: relative;
      }
>
  <div
    style={
      Object {
        "position": "fixed",
        "visibility": "hidden",
      }
    }
  >
    <div
      aria-label={undefined}
      className="ms-Breadcrumb"
      role="navigation"
    >
      <div
        aria-describedby={undefined}
        aria-labelledby={undefined}
        className="ms-FocusZone"
        data-focuszone-id="FocusZone11"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <ol
          className="ms-Breadcrumb-list"
        >
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText1
              </div>
            </span>
            <span>
              *
            </span>
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText2
              </div>
            </span>
            <span>
              *
            </span>
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText3
              </div>
            </span>
            <span>
              *
            </span>
          </li>
          <li
            className="ms-Breadcrumb-listItem"
          >
            <span
              className="ms-Breadcrumb-item"
            >
              <div
                aria-describedby={undefined}
                className="ms-TooltipHost"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                TestText4
              </div>
            </span>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;
